--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
+    "lucide-react": "^0.548.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
